Refactor condigurations of Swagger-UI and set token buffer
